--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Test
+title: Masatoshi Otake
 # logo: /assets/img/headshot_circle.png
-description: Masatoshi Otake
+description: Master student 
 theme: jekyll-theme-minimal
