--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Masatoshi Otake
-# logo: /assets/img/headshot_circle.png
+logo: photo-with-sotyo1.png
 description: Master student 
 theme: jekyll-theme-minimal
